Fix Overflow in Highlight Code Blocks
I updated to CSS to keep long lines in code blocks from bleeding over
to the trailing side of the screen. The code blocks will now scroll
horizontally for longer lines than can be displayed in the screen.

--- a/themes/normal/assets/css/main.css
+++ b/themes/normal/assets/css/main.css
@@ -197,6 +197,10 @@ a {
   text-decoration: none;
 }
 
+.highlight {
+  overflow-x: auto;
+}
+
 @media (max-width: 800px) {
   main > div.section-container {
     display: block;
